Fixes image layout bug.

--- a/sass/modules/_images.scss
+++ b/sass/modules/_images.scss
@@ -59,8 +59,8 @@
 @media screen and (min-width:43em){
 	.left,  //deprecated
 	.illus-alt,  //deprecated
-	.main-content > .image,
-	.main-content > .image img,  //WYSIWYG
+	.main-content .image,
+	.main-content .image img,  //WYSIWYG
 	.image-alt{
 		//box model
 		margin-right: -6.544901065449%;
